<resources>
    <string name="app_name">UrecaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="basic_exposure">Exposure</string>
    <string name="basic_contrast">Contrast</string>
    <string name="basic_adjust">Adjust</string>


    <string name="home_second">Home Second</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_adjust">Adjust</string>
    <string name="menu_transform">Transform</string>
    <string name="menu_lighting">Lighting</string>
    <string name="menu_edit">Edit</string>

    <string name="starlit">Starlit</string>
    <string name="bluemess">Blue Mess</string>
    <string name="lime">Lime</string>
    <string name="amazon">Amazon</string>
    <string name="adele">Adele</string>
    <string name="awestruck">Awestruck</string>
    <string name="metropolis">Metropolis</string>
    <string name="menu_slider">Slider</string>

</resources>
