<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomNavigation"
    app:startDestination="@+id/nav_filter">

    <fragment
        android:id="@+id/nav_filter"
        android:name="com.example.urecaproject.ui.edit.FilterFragment"
        android:label="@string/menu_filter"
        tools:layout="@layout/fragment_filter">
    </fragment>

    <fragment
        android:id="@+id/nav_adjust"
        android:name="com.example.urecaproject.ui.edit.AdjustFragment"
        android:label="@string/menu_adjust"
        tools:layout="@layout/fragment_adjust" />

    <fragment
        android:id="@+id/nav_transform"
        android:name="com.example.urecaproject.ui.edit.TransformFragment"
        android:label="@string/menu_transform"
        tools:layout="@layout/fragment_transform" />
</navigation>