<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.urecaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="imageSaved"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.urecaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_edit"
            app:destination="@id/nav_edit" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit"
        android:name="com.example.urecaproject.ui.edit.EditFragment"
        android:label="@string/menu_edit"
        tools:layout="@layout/fragment_edit" >
        <argument
            android:name="imagePath"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_edit_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>